[package]
name = "learned-today"
version = "0.1.0"
authors = ["koehr <n@koehr.in>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2.8"
default-features = false
features = ["json"]

[dev-dependencies]
rocket = { version = "0.2.8", features = ["testing"] }
